--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@selfxyz/core": "^0.0.19",
     "@selfxyz/qrcode": "^0.0.17",
     "cookies-next": "^5.1.0",
+    "ethers": "^6.13.5",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
